# k8s-Copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  BUILD_AND_INTERVIEW.md  GUARDRAILS.md  PRODUCTION_PITCH.md
examples/: SESSIONS.md  config.example.yaml
src/k8s_copilot/: __init__.py  agent.py  audit.py  cli.py  config.py  k8s_client.py  tools.py  web_app.py  web_launcher.py
tests/: test_smoke.py
