[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-copilot"
version = "0.4.0"
description = "Natural-language assistant for Kubernetes operations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Aniket Chakrabarty", email = "aniketchakrabarty7@gmail.com" }
]
keywords = ["kubernetes", "k8s", "devops", "sre", "llm", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "anthropic>=0.39.0",
    "kubernetes>=29.0.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.31.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "black>=24.0.0", "ruff>=0.3.0"]

[project.scripts]
k8s-copilot = "k8s_copilot.cli:main"
k8s-copilot-web = "k8s_copilot.web_launcher:launch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
